--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "taskbuddy",
-  "homepage": "https://vikasinim.github.io/taskbuddy", 
+  "name": "donezo-task-tracker",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
+  "homepage": "https://VikasiniM.github.io/DoneZoTaskTracker",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
@@ -16,15 +15,8 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
     "vite": "^6.2.0",
-    "gh-pages": "^6.1.1"
+    "gh-pages": "^6.0.0"
   }
 }
