--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
+    
   },
   "dependencies": {
     "react": "^19.0.0",
@@ -16,7 +18,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
-    "vite": "^6.2.0",
-    "gh-pages": "^6.0.0"
+    "gh-pages": "^6.3.0",
+    "vite": "^6.2.0"
   }
 }
